@@ -368,7 +368,7 @@ public class ParameterProviderServiceImpl extends ParameterInheritanceSkeleton i
             }
 
             // requirement: 3.3.9.2.f the new rawValues type and its definitions rawType must be the same
-            if (!newValue.getRawValue().getTypeShortForm().equals(new Integer(pDef.getRawType()))) {
+            if (!newValue.getRawValue().getTypeShortForm().equals(Integer.valueOf(pDef.getRawType()))) {
                 invIndexList.add(new UInteger(index));
                 continue;
             }
